change conf of spark

--- a/templates/root/spark/conf/spark-defaults.conf
+++ b/templates/root/spark/conf/spark-defaults.conf
@@ -6,3 +6,7 @@ spark.executor.extraClassPath	/root/ephemeral-hdfs/conf
 spark.tachyonStore.url tachyon://{{active_master}}:19998
 # for spark version >= 1.4.0
 spark.externalBlockStore.url tachyon://{{active_master}}:19998
+
+spark.eventLog.enabled true
+spark.eventLog.dir hdfs:///log/spark-logs
+spark.history.fs.logDirectory hdfs:///log/spark-logs
