--- a/templates/root/spark/conf/spark-defaults.conf
+++ b/templates/root/spark/conf/spark-defaults.conf
@@ -1,4 +1,5 @@
 spark.executor.memory	{{spark_worker_mem}}
+spark.driver.memory	{{spark_master_mem}}
 spark.executor.extraLibraryPath	/root/ephemeral-hdfs/lib/native/
 spark.executor.extraClassPath	/root/ephemeral-hdfs/conf
 
